@@ -1,5 +1,7 @@
 1998-05-14  Stephan Kulow  <coolo@kde.org>
 
+	* kfileinfocontents.h: introduced KFileInfoContentsSignaler
+
 	* kfileinfocontents.cpp: some more speed improvment
 
 1998-05-10  Stephan Kulow  <coolo@kde.org>
